--- a/website/_assets/timeline.css
+++ b/website/_assets/timeline.css
@@ -42,7 +42,8 @@
     margin-left: -1.5em;
     font-size: 1.5em;
     padding: 0.5em 0.5em 0.7em;
-    color: #333;
+    color: #666;
+    font-weight: bold;
 }
 
 .timeline .item h2
