Minor site fixes, changes to move public files to CDN with SSL.

--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -13,7 +13,7 @@ layout: compress
         {% endif %}
         </title>
         <meta name="description" content="Personal blog, projects and things of Marcus Craske. Software engineer. Hack the planet! (͡ ° ͜ʖ ͡ °)">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
 
         {% css_asset_tag bundle %}
         - /_assets/layout.css
@@ -105,7 +105,7 @@ layout: compress
                         </a>
                     </li>
                     <li>
-                        <a href="http://public.limpygnome.com">
+                        <a href="https://public.limpygnome.com">
                             <span class="icon-folder-open"></span>
                             Public Files
                         </a>
