--- a/website/_assets/layout.css
+++ b/website/_assets/layout.css
@@ -16,6 +16,7 @@ html, body
     margin: 0;
     padding: 0;
     background: #fff;
+    overflow-x: hidden;
 }
 
 body
@@ -454,15 +455,6 @@ main .gallery.larger img
     max-height: 80%;
 }
 
-@media only screen and (max-width: 768px)
-{
-    main > h1,
-    main > article > header > h1
-    {
-        margin-top: 0;
-    }
-}
-
 
 /*
     Home
@@ -572,10 +564,7 @@ main article h2
 
 #projects li
 {
-    display: inline-block;
-    vertical-align: top;
-    margin: 0;
-    padding: 0em 0em 1em 0em;
+    padding: 0.5em;
 }
 
 #projects img
@@ -586,14 +575,6 @@ main article h2
     border: none;
     vertical-align: middle;
     margin: 0em 1em 0em 0em;
-}
-
-@media only screen and (max-width: 768px)
-{
-    #projects li
-    {
-        width: 100%;
-    }
 }
 
 
