Article on k8 setup on raspi pi, various minor tweaks.

--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -23,6 +23,8 @@ layout: compress
 
         - /_assets/syntaxhighlighter/styles/shCore.css
         - /_assets/syntaxhighlighter/styles/shThemeRDark.css
+
+        - /_assets/rouge-syntax-highlighting.css
         {% endcss_asset_tag %}
 
         {% javascript_asset_tag bundle %}
