--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -7,9 +7,9 @@ layout: compress
         <meta charset="utf-8">
         <title>
         {% if page.hideHeader == null %}
-            {{ page.title }} - limpygnome's blog
+            {{ page.title }} - Marcus's blog
         {% else %}
-            limpygnome's blog
+            Marcus's blog
         {% endif %}
         </title>
         <meta name="description" content="Personal blog, projects and things of Marcus Craske. Software engineer. Hack the planet! (͡ ° ͜ʖ ͡ °)">
@@ -56,7 +56,7 @@ layout: compress
             <header>
                 <h1>
                     <a href="/">
-                        limpygnome
+                        Marcus Craske
                     </a>
                 </h1>
                 <p>
@@ -104,7 +104,7 @@ layout: compress
                         </a>
                     </li>
                     <li>
-                        <a href="https://public.limpygnome.com">
+                        <a href="https://public.marcuscraske.com">
                             <span class="icon-folder-open"></span>
                             Public Files
                         </a>
@@ -146,16 +146,16 @@ layout: compress
             <a title="Github" href="https://www.github.com/limpygnome">
                 Github
             </a>
-            <a title="Instagram" href="https://www.instagram.com/limpygnome">
+            <a title="Instagram" href="https://www.instagram.com/marcuscraske">
                 Instagram
             </a>
             <a title="LinkedIn" href="http://www.linkedin.com/in/marcuscraske">
                 LinkedIn
             </a>
-            <a title="Strava" href="https://www.strava.com/athletes/limpygnome">
+            <a title="Strava" href="https://www.strava.com/athletes/marcuscraske">
                 Strava
             </a>
-            <a title="E-mail" href="mailto:limpygnome@gmail.com" target="_blank">
+            <a title="E-mail" href="mailto:contact@marcuscraske.com" target="_blank">
                 E-mail
             </a>
 
