Updates for site relaunch.

--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -104,7 +104,7 @@ layout: compress
                         </a>
                     </li>
                     <li>
-                        <a href="https://public.marcuscraske.com">
+                        <a href="https://files.marcuscraske.com">
                             <span class="icon-folder-open"></span>
                             Public Files
                         </a>
@@ -143,7 +143,7 @@ layout: compress
                 </li>
             </ul>
 
-            <a title="Github" href="https://www.github.com/limpygnome">
+            <a title="Github" href="https://www.github.com/marcuscraske">
                 Github
             </a>
             <a title="Instagram" href="https://www.instagram.com/marcuscraske">
