Public files, minor updates.

--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -7,9 +7,9 @@ layout: compress
         <meta charset="utf-8">
         <title>
         {% if page.hideHeader == null %}
-            {{ page.title }} - Marcus's blog
+            {{ page.title }} - Marcus's Blog
         {% else %}
-            Marcus's blog
+            Marcus's Blog
         {% endif %}
         </title>
         <meta name="description" content="Personal blog, projects and things of Marcus Craske. Software engineer. Hack the planet! (͡ ° ͜ʖ ͡ °)">
