--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -7,13 +7,21 @@ layout: compress
         <meta charset="utf-8">
         <title>
         {% if page.hideHeader == null %}
-            {{ page.title }} - Marcus's Blog
+            {{ page.title }} - Marcus Craske
         {% else %}
-            Marcus's Blog
+            Marcus Craske
         {% endif %}
         </title>
         <meta name="description" content="Personal blog, projects and things of Marcus Craske. Software engineer. Hack the planet! (͡ ° ͜ʖ ͡ °)">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5, minimum-scale=1">
+        <meta name="HandheldFriendly" content="True" />
+
+        <meta property="og:site_name" content="Marcus Craske">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Marcus Craske">
+        <meta property="og:description" content="Personal blog, projects and things of Marcus Craske. Software engineer. Hack the planet! (͡ ° ͜ʖ ͡ °)">
+
+        <link rel="shortcut icon" href="/favicon.ico">
 
         {% css_asset_tag bundle %}
         - /_assets/layout.css
