Progress with smart home article, fixes for img gallery, fix for www redirect on main site, other minor changes.

--- a/website/_includes/image.html
+++ b/website/_includes/image.html
@@ -1,6 +1,6 @@
 <a href="{{ include.path }}">
     <picture>
         <source srcset="{{ include.path | replace:'.png','.webp' | replace:'.jpg','.webp' }}" type="image/webp">
-        <img src="{{ include.path }}" alt="{{ include.alt }}" class="{{ include.class }}" />
-    </picture>
+        <img src="{{ include.path }}" alt="{{ include.alt }}{{ include.description }}" class="{{ include.class }}" />
+    </picture>{% if include.description != null %}<span>{{ include.description }}</span>{% endif %}
 </a>
