--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -12,14 +12,14 @@ layout: compress
             Marcus Craske
         {% endif %}
         </title>
-        <meta name="description" content="Personal blog, projects and things of Marcus Craske. Software engineer. Hack the planet! (͡ ° ͜ʖ ͡ °)">
+        <meta name="description" content="Personal blog, projects and things of Marcus Craske. Software engineer. Hack the planet!">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5, minimum-scale=1">
         <meta name="HandheldFriendly" content="True" />
 
         <meta property="og:site_name" content="Marcus Craske">
         <meta property="og:type" content="website">
         <meta property="og:title" content="Marcus Craske">
-        <meta property="og:description" content="Personal blog, projects and things of Marcus Craske. Software engineer. Hack the planet! (͡ ° ͜ʖ ͡ °)">
+        <meta property="og:description" content="Personal blog, projects and things of Marcus Craske. Software engineer. Hack the planet!">
 
         <link rel="shortcut icon" href="/favicon.ico">
 
