--- a/website/_assets/layout.css
+++ b/website/_assets/layout.css
@@ -464,12 +464,6 @@ main img.thumb
     }
 }
 
-main .gallery.larger img
-{
-    max-width: 80%;
-    max-height: 80%;
-}
-
 
 /*
     Home (and shared)
@@ -604,6 +598,17 @@ main article h2
     margin: 0em 1em 0em 0em;
 }
 
+#projects .year
+{
+    font-size: 0.8rem;
+    margin: 0.5em;
+    padding: 0.4em;
+    background: #666;
+    border-radius: 8px;
+    color: #fff;
+    float: right;
+}
+
 
 /*
     Gallery (generic container styling)
@@ -626,7 +631,13 @@ main article h2
 
 .gallery li img
 {
-    padding: 0.5em;
+    margin: 1em 0em;
+    max-width: 100%;
+}
+
+.gallery li span
+{
+    text-align: center;
 }
 
 @media only screen and (max-width: 1000px)
